[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispergram"
version = "0.8.3"
description = "Local, offline Telegram chat transcriber - voice & video via Whisper, screenshots via OCR, photos via a local vision model"
readme = "README.md"
license = "MIT"
authors = [{ name = "David Malko", email = "davidmalko87@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "telegram",
    "telegram-export",
    "whisper",
    "faster-whisper",
    "transcription",
    "speech-to-text",
    "voice-messages",
    "voice-to-text",
    "ocr",
    "image-captioning",
    "screenshot",
    "offline",
]
dependencies = [
    "faster-whisper>=1.0",
    "tqdm>=4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/davidmalko87/whispergram"
Repository = "https://github.com/davidmalko87/whispergram"
Changelog = "https://github.com/davidmalko87/whispergram/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/davidmalko87/whispergram/issues"

[project.scripts]
whispergram = "whispergram:main"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "Pillow>=9"]
describe = ["transformers>=4.50", "torch>=2.2", "Pillow>=9"]
describe-hq = ["transformers>=4.50", "torch>=2.2", "torchvision", "Pillow>=9"]
test = ["pytest>=7.0", "ruff"]

[tool.setuptools]
py-modules = ["whispergram"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["ChatExport_*", "DataExport_*"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
